<resources>
    <string name="app_name">Kirby Assistant</string>
	<string name="simple_mode_app_name">Kirby Assistant·极简模式</string>
	<string name="game_title">当前是</string>
	<string name="tj_title">推荐</string>
	<string name="wiki_title">百科</string>
	<string name="setting_title">设置</string>
	<string name="about_title">关于</string>
	<string name="help_title">帮助</string>
	<string name="chat_title">详情</string>
	<string name="video_title">视频</string>
	<string name="cheatCode_title">金手指</string>
	<string name="ziyuan">资源</string>
	<string name="talk">闲聊</string>
	<string name="login_title">登录/注册</string>
	<string name="game">游戏</string>
	<string name="welcome_to">不仅有游戏</string>
	<string name="emulators">模拟器</string>
	<string name="not_login">没有登陆</string>
	<string name="language">语言设置</string>
	<string name="crash_title">出错了</string>
	<string name="egg">这里是彩蛋</string>
	<string name="bug_report">Bug已经上传</string>
	<string name="two_back">请再按一次退出程序</string>
	<string name="profile_photo">头像</string>
	<string name="permissionandprivacy_title">权限和隐私政策</string>
	<string name="permissionandprivacy_cnntent">权限说明:\n
		Kirby Assistant 申请了一些运行时权限和普通权限，关于这些权限申请的说明，请看下文:\n
		网络访问权限:用于获取游戏封面图，查看攻略视频封面操作\n
		请求访问安装包权限:用于下载模拟器文件完毕后进行跳转安装\n
		防止手机休眠:服务商要求必须申请的权限，否则无法使用服务商提供的服务\n
		读取日志:用于程序崩溃后，定位崩溃信息的操作\n
		如果您不同意上述权限可以不赋予相关权限或者退出 Kirby Assistant\n
		\n\n\n
		隐私政策:\n
		Kirby Assistant 仅使用了服务商提供的数据服务功能，也就是用户登录注册，闲聊发送获取，视频封面获取，游戏封面获取，模拟器文件下载等操作。
		当程序崩溃时会收集崩溃信息，可能包括:手机型号、系统版本、程序版本等信息，这些信息不会上传，您需要手动发送给我，而且这些信息不会包括您的私人数据。
		</string>
	<string name="find_new_version">发现新版本</string>
	<string name="view_new_version">查看</string>
	<string name="chat_send">发送</string>
	<string name="chat_upload">发送中</string>
	<string name="chat_true">发送成功:</string>
	<string name="chat_false">发送失败:</string>
	<string name="chat_del_success">闲聊删除成功</string>
	<string name="chat_del_fail">闲聊删除失败:</string>
	<string name="chat_edit_success">闲聊编辑成功</string>
	<string name="chat_edit_fail">闲聊编辑失败:</string>
	<string name="chat_copy">复制内容</string>
	<string name="chat_del">删除此闲聊</string>
	<string name="chat_edit">编辑此闲聊</string>
	<string name="donate_alipay">支付宝</string>
	<string name="donate_wechatpay">微信</string>
	<string name="donate_btc">比特币</string>
	<string name="donate_qqpay">QQ</string>
	<string name="donate_paypal">PayPal</string>
	<string name="load_fail">加载失败，请刷新重试</string>
	<string name="user_title">用户信息</string>
	<string name="head_upload">上传头像中</string>
	<string name="copy">复制</string>
	<string name="email">邮件发送</string>
	<string name="check_me">点我</string>
	<string name="email_fail">邮箱格式不正确</string>
	<string name="sw_icon_finish">图标已经切换完毕了，桌面刷新后你就可以看到新的图标了</string>
	<string name="user_name">用户名</string>
	<string name="user_email">邮箱</string>
	<string name="talk_photo">拍照</string>
	<string name="choose_photo">选择图片</string>
	<string name="not_have_user">没有账号？点我</string>
	<string name="have_user">已有账号？点我</string>
	<string name="modification_email">修改邮箱</string>
	<string name="modification_email_hint">修改邮箱（成功后需要重新登录）</string>
	<string name="modification_email_false">邮箱验证失败</string>
	<string name="modification_email_old">请输入原来的邮箱</string>
	<string name="modification_email_new">请输入新的邮箱</string>
   <string name="modification_email_new_again">请再输入一次新的邮箱</string>
	<string name="modification_password_old">请输入原密码</string>
	<string name="modification_password_new">请输入新密码</string>
	<string name="modification_password_new_again">请再输入一次新密码</string>
	<string name="password">两次输入的密码不同</string>
	<string name="modification_password">修改密码</string>
	<string name="modification_password_hint">修改密码（成功后需要重新登录）</string>
	<string name="modification_password_false">出错</string>
	<string name="is_null">不能为空</string>
	<string name="edit_true">修改成功</string>
	<string name="edit_false">修改失败:</string>
	<string name="user_logout">账号登出</string>
	<string name="logout_true">登出成功</string>
	<string name="register_time">注册于</string>
	<string name="theme_title">主题</string>
	<string name="web_loading">加载中</string>
	<string name="hello">你好:</string>
	<string name="look_more">查看更多</string>
	<string name="edit_some">写点什么吧｡ӧ◡ӧ｡</string>
	<string name="look_funk">看什么看(ﾉ｀⊿´)ﾉ</string>
	<string name="edit_ny">内容(1000字)</string>
	<string name="game_name">请选择您需要的语言版本</string>
	<string name="game_name1">[限定]仅存在美版</string>
	<string name="game_name2">[限定]仅存在日版</string>
	<string name="tj_app">推荐APP</string>
	<string name="app_ZArchiver">方便好用的解压工具</string>
	<string name="downloading">下载中</string>
	<string name="download_success">下载成功，保存路径:</string>
	<string name="download_fail">下载失败:</string>
	<string name="link_bmob">连接服务器中</string>
	<string name="link_fail">连接服务器失败</string>
	<string name="download_dia_mess">咱只给你汉化版</string>
	<string name="not_install_CoolApk">未安装酷安</string>
	<string name="no_login">未登录，无法使用</string>
	<string name="login">登录</string>
	<string name="login_user">用户名/邮箱</string>
	<string name="login_password">密码</string>
	<string name="login_success">登录成功</string>
	<string name="login_fail">登录失败</string>
	<string name="copy_success">文本已复制</string>
	<string name="intro_welcome_title">欢迎</string>
	<string name="intro_welcome_text">这是一个可以让你免费获取到星之卡比游戏资源的应用程序</string>
	<string name="intro_user_title">账户</string>
	<string name="intro_user_text">Kirby Assistant拥有用户系统，你可以登录你之前注册的账号或者注册新账号\n当然，你也可以在进入程序之后登录或注册</string>
	<string name="intro_finish_title">完成</string>
	<string name="intro_finish_text">该程序的配置已经自动完成了\n祝你使用愉快</string>
	<string name="intro_permission_title">权限</string>
	<string name="intro_permission_text">Kirby Assistant需要以下权限请授予</string>
	<string name="intro_permission_sd">"SD卡读写权限"</string>
	<string name="intro_icon_title">图标</string>
	<string name="intro_icon_text">Kirby Asssistant拥有两个图标，你可以稍后在菜单内切换</string>
	<string name="x_title">信息</string>
	<string name="version">版本</string>
	<string name="star_title">评分</string>
	<string name="simple_mode">极简模式</string>
	<string name="star_message">期待你的五分好评</string>
	<string name="faq_title">帮助</string>
	<string name="faq_message">常见问题汇总</string>
	<string name="feedback_title">反馈</string>
	<string name="qq_group">更详细的帮助？点我进入QQ群</string>
	<string name="tg_channel_title">Telegram频道</string>
	<string name="tg_channel_message">会在里面发布更新内容以及其他事情</string>
	<string name="dev_title">开发者</string>
	<string name="dev_coolapk">酷安\@汝南京</string>
	<string name="dev_coolapk_link" translatable="false">aHR0cDovL3d3dy5jb29sYXBrLmNvbS91LzY1MTg4MA==</string>
	<string name="dev_github">Github\@EnduerBlaze</string>
	<string name="dev_github_link" translatable="false">aHR0cHM6Ly9naXRodWIuY29tL0VuZHVyZUJsYXpl</string>
	<string name="dev_weibo">新浪微博\@汝南京</string>
	<string name="dev_weibo_link" translatable="false">aHR0cHM6Ly93ZWliby5jb20vcnVuYW5qaW5n</string>
	<string name="dev_twitter">Twitter\@EndureBlaze</string>
	<string name="dev_twitter_link" translatable="false">aHR0cHM6Ly90d2l0dGVyLmNvbS9uaWhhb2N1bj9zPTA5</string>
	<string name="github">在Github查看这个项目</string>
	<string name="gitlab">在Gitlab查看这个项目</string>
	<string name="contributor_title">贡献者</string>
	<string name="program_title">程序特别贡献</string>
	<string name="program_github_lxfly2000">Github@lxfly2000</string>
	<string name="program_github_lxfly2000_link" translatable="false">aHR0cHM6Ly9naXRodWIuY29tL2x4Zmx5MjAwMA==</string>
	<string name="translation_tw_title">繁体中文翻译</string>
	<string name="translation_tw_github_longxk2017">Github\@longxk2017</string>
	<string name="translation_tw_github_longxk2017_link" translatable="false">aHR0cHM6Ly9naXRodWIuY29tL2xvbmd4azIwMTc=</string>
	<string name="translation_en_title">英语翻译</string>
	<string name="translation_en_tieba_nannannan550">百度贴吧\@难难难550</string>
	<string name="translation_en_tieba_nannannan550_link" translatable="false">aHR0cHM6Ly90aWViYS5iYWlkdS5jb20vaG9tZS9tYWluP3VuPemavumavumavjU1MA==</string>
	<string name="translation_en_tieba_guangzhiyaoxi">百度贴吧\@光之耀西</string>
	<string name="translation_en_tieba_guangzhiyaoxi_link" translatable="false">aHR0cDovL3RpZWJhLmJhaWR1LmNvbS9ob21lL21haW4/dW495YWJ5LmL6ICA6KW/</string>
	<string name="draw_icon_title">图标绘制</string>
	<string name="draw_icon_coolapk_hkliuxing">酷安\@hk流星</string>
	<string name="draw_icon_coolapk_hkliuxing_link" translatable="false">aHR0cDovL3d3dy5jb29sYXBrLmNvbS91LzU1NTg4Mw==</string>
	<string name="draw_icon_coolapk_markuss">酷安\@Markuss</string>
	<string name="draw_icon_coolapk_markuss_link" translatable="false">aHR0cDovL3d3dy5jb29sYXBrLmNvbS91LzUyOTcxOA==</string>
	<string name="draw_icon_tieba_xiaoyibu">百度贴吧\@★☆小伊布☆★</string>
	<string name="draw_icon_tieba_xiaoyibu_link" translatable="false">aHR0cHM6Ly90aWViYS5iYWlkdS5jb20vaG9tZS9tYWluP3VuPeKYheKYhuWwj+S8iuW4g+KYhuKYhQ==</string>
	<string name="video_author_title">视频作者</string>
	<string name="video_author_bilibili_xige">哔哩哔哩动画\@虚影无华</string>
	<string name="video_author_bilibili_xige_link" translatable="false">aHR0cDovL3NwYWNlLmJpbGliaWxpLmNvbS8xMzAwMTI1Mg==</string>
	<string name="writer_help_faq_title">FAQ 编写</string>
	<string name="writer_help_faq_coolapk_talinhu">酷安\@塔林狐</string>
	<string name="writer_help_faq_coolapk_talinhu_link" translatable="false">aHR0cDovL3d3dy5jb29sYXBrLmNvbS91LzExNTc3NzQ=</string>
	<string name="greenapps_title">Android 绿色应用公约</string>
	<string name="greenapps_message">Kirby Assistant 遵循绿色应用公约，并通过认证\n点击访问 Android 绿色应用公约官网</string>
	<string name="simple_mode_is_enable">已启用极简模式</string>
	<string name="simple_mode_is_disable">已禁用极简模式</string>
	<string name="simple_mode_to_enable">启用极简模式后会重新进入应用并且禁用[闲聊]和[我]功能\n禁用所有动画特效\n禁用主题功能</string>
	<string name="simple_mode_to_disable">禁用极简模式后会重新进入应用并且启用[闲聊]和[我]功能\n启用所有动画特效\n启用主题功能</string>
	<string name="register">注册</string>
	<string name="register_success">注册成功</string>
	<string name="register_fail">注册失败</string>
	<string name="register_username">用户名（注册以后不可更改）</string>
	<string name="register_email">邮箱（用于找回密码）</string>
	<string name="register_password">密码（支持数字和字母）</string>
	<string name="register_password_again">请再次输入密码</string>
	<string name="donate_title">捐赠</string>
	<string name="dia_download">下载</string>
	<string name="dia_yes">确定</string>
	<string name="dia_enable">启用</string>
	<string name="dia_disable">禁用</string>
	<string name="dia_open">打开</string>
	<string name="dia_close">关闭</string>
	<string name="dia_cancel">取消</string>
	<string name="dia_jp">日版</string>
	<string name="dia_us">美版</string>
	<string name="dia_zh">汉化</string>
	<string name="dia_nu"></string>
	<string name="dia_agree">同意</string>
	<string name="dia_disagree">不同意</string>
	<string name="bj">背景:</string>
	<string name="js">介绍:</string>
	<string name="gb_x1_bj">暂无</string>
	<string name="gb_x1_js">HAL研究所在1992年时面临破产危机，樱井政博当时设计了一个叫Popopo的小角色，
		但因为不少人的喜欢，就准备成为准备在GB（Gameboy）平台发行的Twinkle Popo的主角，
		随着后来主角被改名为卡比，最后游戏定名为《星之卡比》，于1992年4月27日在日本发行。
		\n游戏定义为“初级者适用”，不走当时动作游戏追求难度的路线，让每个玩家都可以轻松通关，受到了玩家的极大欢迎。
		除此以外，《星之卡比》还塑造了系列全勤奖的小兵角色瓦豆鲁迪、很容易成为第一关大Boss的风语大树，
		屡败屡战的独眼云，还有可以视为搞笑角色的最终Boss帝帝帝大王，与适合给挑战者游玩的Extra模式，
		为将来的百分比完成度设定打下了良好的基础。在当时GB游戏普遍质量不算高的情况下，卡比脱颖而出，
		取得了成功，从此成为任天堂新一代明星。</string>
	<string name="gb_x2_bj">暂无</string>
	<string name="gb_x2_js">《梦之泉物语》之后樱井政博准备在SFC平台发行作品，而原地图设计下村真一
		则作为Gameboy平台新作的监督，1995年3月21日，《星之卡比2》在Gameboy平台发行，
		支持在Gameboy Color平台彩色显示。本作的卖点是伙伴系统，利用不同的伙伴和能力组合取得不同的效果。
		\n而能力数量减少至7种，一共3个伙伴—陆库、海恩、空，总共有21种组合。游戏没有隐藏关卡，
		在每个关卡收集的彩虹碎片是完成游戏的重点。部分彩虹碎片获取需要特定的动物伙伴来帮助，
		增加了游戏的策略性。必须收集所有彩虹碎片，才能在最终关获得虹之剑对抗最终Boss暗物质，达成真结局。</string>
	<string name="gb_dzk_bj">暂无</string>
	<string name="gb_dzk_js">暂无</string>
	<string name="gb_dzt_bj">暂无</string>
	<string name="gb_dzt_js">暂无</string>
	<string name="gb_bsx_bj">暂无</string>
	<string name="gb_bsx_js">暂无</string>
	<string name="fc_mzq_bj">在波普星中有一个梦之泉，那个梦之泉每天都会涌出一些梦的精华，
		那是整个普普大陆的梦和希望的来源，并且可以给人带去美梦和恬静。可是有一天所有人发现自己都没办法做梦了。
		原来是迪迪迪大王（DDD）在泉水里洗澡玩水的结果，他还把梦之泉的所有力量来源星之杖弄碎，分给了他的部下。
		卡比为了夺回大家愉快的午睡时间，开始了他的冒险。</string>
</resources>