<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="4dp">

	<EditText
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:layout_width="match_parent"
		android:ems="10"
		android:id="@+id/modification_password_old"
		android:hint="@string/modification_password_old"/>

	<EditText
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:layout_width="match_parent"
		android:ems="10"
		android:id="@+id/modification_password_new"
		android:hint="@string/modification_password_new"/>

	<EditText
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:layout_width="match_parent"
		android:ems="10"
		android:id="@+id/modification_password_new_again"
		android:hint="@string/modification_password_new_again"/>

</LinearLayout>

