<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?color_bkg">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            tools:ignore="UselessParent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?color_bkg_title">

            <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/edit_some"
                    android:textSize="18sp"
                    android:textColor="?color_text"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="4dp"/>

            <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/chat_send"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:text="@string/chat_send"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:textColor="?attr/colorPrimary"
                    android:layout_marginEnd="4dp"
                    tools:ignore="RelativeOverlap"/>

        </RelativeLayout>

        <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/edit_ny"
                android:id="@+id/chat_editview"
                android:maxEms="1000"
                android:textColorHint="?color_text_hint"
                android:textColor="?color_text"
                android:background="@null"
                android:layout_margin="4dp"
                tools:ignore="Autofill,TextFields"/>

    </LinearLayout>

</FrameLayout>

