<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?color_bkg_main"
        android:id="@+id/root_view">

    <androidx.cardview.widget.CardView
            android:layout_height="192dp"
            android:layout_width="match_parent"
            app:elevation="5dp"
            app:cardCornerRadius="4dp"
            android:layout_margin="8dp">

        <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/change_userhead">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:id="@+id/mo_user_head"
                    tools:ignore="ContentDescription"/>

            <cn.endureblaze.ka.customui.CircleImageView
                    android:layout_height="80dp"
                    android:layout_width="80dp"
                    android:id="@+id/user_head"
                    android:background="@drawable/theme_blue"
                    android:src="@drawable/theme_blue"
                    android:layout_centerHorizontal="true"
                    android:transitionName="userHead"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/user_name"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/user_head"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:id="@+id/user_id"
                    android:layout_below="@id/user_name"
                    android:textColor="?color_text_pressed"
                    android:layout_centerHorizontal="true"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:layout_below="@id/user_id"
                    android:id="@+id/user_data"
                    android:textColor="?color_text_pressed"
                    android:layout_centerHorizontal="true"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:textColor="?color_text_pressed"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/user_data"
                    android:id="@+id/user_email"
                    android:layout_marginBottom="10dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="2"
            android:columnCount="2">

        <Button
                android:layout_height="wrap_content"
                android:text="@string/modification_email"
                android:id="@+id/edit_email"
                android:layout_columnWeight="1"
                android:transitionName="email"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"/>

        <Button
                android:layout_height="wrap_content"
                android:text="@string/modification_password"
                android:id="@+id/edit_password"
                android:layout_columnWeight="1"
                android:transitionName="pass"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"/>

        <Button
                android:layout_height="wrap_content"
                android:text="@string/user_logout"
                android:id="@+id/user_logout"
                android:layout_columnSpan="2"
                android:layout_columnWeight="2"
                android:transitionName="logout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

    </GridLayout>

</LinearLayout>

